<resources>
    <string name="app_name">Судоку</string>
    <string name="error">Error</string>
    <string name="titleHistoryButton">История</string>
    <string name="titleStatisticButton">Статистика</string>
    <string name="titleGameButton">Играть</string>

    <string name="titleFact">Интересный факт о головоломке:</string>
    <string name="titleToolbarHistory">История</string>
    <string name="titleToolbarGame">Игра</string>
    <string name="titleToolbarStatistic">Статистика</string>
    <string name="titleToolbarStartGame">Начать игру</string>
    <string name="titleToolbarInformation">Информация</string>
    <string name="titleToolbarResult">Результат</string>
    <string name="titleToolbarGameOver">Конец игры</string>
    <string name="buttonStartNewGame">Новая игра</string>
    <string name="buttonOk">Понятно</string>
    <string name="buttonUpdate">Обновить</string>

    <string name="textInfo1">В начале игры некоторые ячейки судоку заполнены цифрами.</string>
    <string name="textInfo2">Головоломка считается решенной, если все пустые ячейки заполнены цифрами от 1 до 9.</string>
    <string name="textInfo3">Цифры не должны повторятся ни в одной из 9 <b>строк</b>, <b>столбцов</b> и <b>блоков</b>.</string>
    <string name="textInfo4">Изучите игровое поле и найдите цифры, которые подойдут для пустых ячеек.</string>

    <string name="difficultEasy">Легкая</string>
    <string name="difficultMiddle">Средняя</string>
    <string name="difficultHard">Сложная</string>
    <string name="difficultExpert">Экспертная</string>

    <string name="messageDifficultEasy">Текущая сложность: Легкая!</string>
    <string name="messageDifficultMiddle">Текущая сложность: Средняя!</string>
    <string name="messageDifficultHard">Текущая сложность: Сложная!</string>
    <string name="messageDifficultExpert">Текущая сложность: Экспертная!</string>

    <string name="titleWinResult">Победа!</string>
    <string name="titleLostResult">Поражение!</string>
    <string name="titleDifficult">Уровень сложности:</string>
    <string name="titleMistakes">Количество ошибок:</string>
    <string name="titleTime">Время:</string>
    <string name="titlePoints">Набранные очки:</string>

    <string name="textStopGameButton">Выйти</string>
    <string name="textHelpButton">Подсказка</string>
    <string name="textDeleteButton">Стереть</string>
    <string name="numberOne">1</string>
    <string name="numberTwo">2</string>
    <string name="numberThree">3</string>
    <string name="numberFour">4</string>
    <string name="numberFive">5</string>
    <string name="numberSix">6</string>
    <string name="numberSeven">7</string>
    <string name="numberEight">8</string>
    <string name="numberNine">9</string>

    <string name="titleGames">Игры</string>
    <string name="titleAllGames">Количество игр</string>
    <string name="titleWinGames">Выигранных игр</string>
    <string name="titleLostGames">Проигранных игр</string>
    <string name="titleWithoutMistakesGames">Побед без ошибок</string>
    <string name="titleTimes">Время</string>
    <string name="titleBestTime">Лучшее время</string>
    <string name="titleAverageTime">Среднее время</string>
    <string name="titlePoint">Счёт</string>
    <string name="titleBestPoints">Лучший счёт</string>
    <string name="titleAveragePoints">Средний счёт</string>

    <string name="dialogTitle">Выйти из игры?</string>
    <string name="dialogMessage">Вы уверены, что хотите выйти? Весь сохраненный процесс будет потерян.</string>
    <string name="dialogButtonYes">Да</string>
    <string name="dialogButtonNo">Нет</string>

    <string name="textActionRemove">Очистить историю</string>
    <string name="textStatusHistory">Статус:</string>

    <string name="errorMessage">Произошла неизвестная ошибка!</string>
    <string name="titleEmptyHistoryList">Данных об играх отсутсвуют!</string>
</resources>