<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CustomConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/difficultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Экспертная" />

    <TextView
        android:id="@+id/mistakesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/pointsTextView"
        app:layout_constraintStart_toEndOf="@id/difficultTextView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Ошибки: 0/3" />

    <TextView
        android:id="@id/pointsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/timeTextView"
        app:layout_constraintStart_toEndOf="@id/mistakesTextView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Очки: 1500" />

    <TextView
        android:id="@id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Время: 00:00" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="difficultTextView" />

    <com.cdr.sudoku.game.field.SudokuBoardView
        android:id="@+id/sudokuBoardView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <GridLayout
        android:id="@+id/gridButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sudokuBoardView">

        <Button
            android:id="@+id/oneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_button_number"
            android:contentDescription="@string/titleGameButton"
            android:text="@string/numberOne"
            android:textSize="20sp" />

        <Button
            android:id="@+id/twoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_button_number"
            android:contentDescription="@string/titleGameButton"
            android:text="@string/numberTwo"
            android:textSize="20sp" />

        <Button
            android:id="@+id/threeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_button_number"
            android:contentDescription="@string/titleGameButton"
            android:text="@string/numberThree"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_button_number"
            android:contentDescription="@string/titleGameButton"
            android:text="@string/numberFour"
            android:textSize="20sp" />

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_button_number"
            android:contentDescription="@string/titleGameButton"
            android:text="@string/numberFive"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_button_number"
            android:contentDescription="@string/titleGameButton"
            android:text="@string/numberSix"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_button_number"
            android:contentDescription="@string/titleGameButton"
            android:text="@string/numberSeven"
            android:textSize="20sp" />

        <Button
            android:id="@+id/eightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_button_number"
            android:contentDescription="@string/titleGameButton"
            android:text="@string/numberEight"
            android:textSize="20sp" />

        <Button
            android:id="@+id/nineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_button_number"
            android:contentDescription="@string/titleGameButton"
            android:text="@string/numberNine"
            android:textSize="20sp" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>