<?xml version="1.0" encoding="utf-8"?>
<com.luolc.emojirain.EmojiRainLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    style="@style/CustomConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="80dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="250dp">

        <TextView
            android:id="@+id/resultTextView"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Поражение!" />

        <ImageView
            android:id="@+id/resultImageView"
            style="@style/CustomImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/titleToolbarResult"
            android:src="@drawable/ic_lost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultTextView" />

        <TextView
            android:id="@+id/titleDifficult"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/titleDifficult"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultImageView" />

        <TextView
            android:id="@+id/difficultTextView"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/titleDifficult"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Легкая" />

        <TextView
            android:id="@+id/titleMistakes"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/titleMistakes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleDifficult" />

        <TextView
            android:id="@+id/mistakesTextView"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/titleMistakes"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="2/3" />

        <TextView
            android:id="@+id/titleTime"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/titleTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleMistakes" />

        <TextView
            android:id="@+id/timeTextView"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/titleTime"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="5 мин. 38 сек." />

        <TextView
            android:id="@+id/titlePoints"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/titlePoints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTime" />

        <TextView
            android:id="@+id/pointsTextView"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/titlePoints"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="1350" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/acceptButton"
        style="@style/CustomImageButtonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="100dp"
        android:background="@drawable/background_shapes"
        android:contentDescription="@string/titleToolbarResult"
        android:src="@drawable/ic_accept" />

</com.luolc.emojirain.EmojiRainLayout>